--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,10 @@
 .slider-thumb-checked {
   transform: translateX(1.75rem); /* Adjust this value as needed */
 }
+
+@media print {
+  .header {
+    margin: 5px 0 0 10px;
+    padding: 10px;
+  }
+}
